--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-toastify": "^10.0.5",
     "scheduler": "^0.23.0",
     "styled-components": "^6.1.8",
     "use-context-selector": "^1.4.4",
